[package]
name = "muskitty-dom"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
description = "DOM core types for the MusKitty browser engine"
repository = "https://github.com/muskitty-dev/muskitty-dom"
homepage = "https://github.com/muskitty-dev"
documentation = "https://docs.rs/muskitty-dom"
keywords = ["dom", "web", "browser"]
categories = ["web-programming"]
authors = ["MusCat / MusKitty Bit-Torch Community"]

[dependencies]
