[package]
name = "muskitty-dom"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
description = "DOM core types for the MusKitty browser engine"
repository = "https://github.com/muskitty-dev/muskitty-dom"
homepage = "https://github.com/muskitty-dev"
documentation = "https://docs.rs/muskitty-dom"
keywords = ["dom", "web", "browser"]
categories = ["web-programming"]
authors = ["MusCat / MusKitty Bit-Torch Community"]

[dependencies]

# 防止被父 workspace (D:\Muskitty\Cargo.toml) 误吸入。
# dom 作为独立 git 仓库剥离，有自己的 workspace 根。
[workspace]
